# LLM-Librarian

./: .envsample  .gitmodules  LICENSE  README.md  docker-compose.yaml  old_pdf_metadata.json  pdf_metadata.json  pdf_metadata_extractor.py  process_all.py  pyproject.toml  requirements.txt  test_pydantic_ai.py  test_tesseract.py
